--- a/chapter7.tex
+++ b/chapter7.tex
@@ -1,7 +1,7 @@
 \setcounter{chapter}{6}
 \chapter{Relative tensors, ideas of volume, Green-Stokes theorems.}
 \pagebreak[4]
-\begin{comment}
+%\begin{comment}
 \section{p241 - Exercise}
 \begin{tcolorbox}
 If $b_{rs}$ is an absolute tensor, show that the determinant $\left|b_{rs}\right|$ is a relative invariant of weight $2$. What are the tensor characters of $\left|c^{rs}\right|$ and $\left|f^r_{s}\right|$?
@@ -631,8 +631,42 @@ $$\blacklozenge$$
 \newpage
 
 
+\section{p278 - Exercise 2 }
+\begin{tcolorbox}
+Prove that the covariant derivative of a generalized Kronecker delta is zero.
+\end{tcolorbox}
+$\mathbf{(2.525)}$  gives: 
+\begin{align}
+\delta^{k_1\dots k_M}_{s_1 \dots s_M|s_{\tau}} &= \underbrace{\pdv{\delta^{k_1\dots k_M}_{s_1 \dots s_M}}{x^{s_{\tau}}}}_\text{=0} + \Gamma^{k_1}_{q s_{\tau}}\delta^{q k_2\dots k_M}_{s_1 \dots s_M}+ \dots +\Gamma^{k_M}_{q s_{\tau}}\delta^{ k_1\dots k_{(M-1)}q}_{s_1 \dots s_M} - \Gamma^{q}_{ s_1 s_{\tau}}\delta^{ k_1\dots k_{M}}_{qs_2 \dots s_M} -\dots -\Gamma^{q}_{ s_M s_{\tau}}\delta^{ k_1\dots k_{M}}_{s_1 \dots s_{(M-1)}q}\\
+\end{align}
+Let us now consider the following notation for $\delta^{k_1\dots k_M}_{s_1 \dots s_M}$
+$$\delta^{k_1 \leftrightsquigarrow s_x\leftrightsquigarrow  k_M}_{s_1 \leftrightsquigarrow k_y\leftrightsquigarrow s_M}$$
+showing the respective position of an element in the two series use in the generalized Kronecker delta.\\
+Consider in this expression (no summations on the indexes) the positive and negative terms like
+\begin{align}
+\left.\Gamma^{k_y}_{q s_{\tau}}\delta^{k_1 \leftrightsquigarrow q\leftrightsquigarrow  k_M}_{s_1 \leftrightsquigarrow k_y\leftrightsquigarrow s_M}\right|_{q\ne s_x},\dots ,- \left.\Gamma^{q}_{ s_x s_{\tau}}\delta^{k_1 \leftrightsquigarrow s_x\leftrightsquigarrow  k_M}_{s_1 \leftrightsquigarrow q\leftrightsquigarrow s_M}\right|_{q\ne k_y}
+\end{align} 
+Obviously these terms are zero as $q$ does not refer to the value necessary to have no repetition in the set $\{s_1 \dots s_M\}$ or $\{k_1 \dots k_M\}$.\\
 
-\section{p278 - Exercise 2}
+Consider now the sum of two terms like (no summations on the indexes).
+\begin{align}
+& \left.\Gamma^{k_y}_{q s_{\tau}}\delta^{k_1 \leftrightsquigarrow q\leftrightsquigarrow  k_M}_{s_1 \leftrightsquigarrow k_y\leftrightsquigarrow s_M}\right|_{q=  s_x}-\left.\Gamma^{q}_{ s_x s_{\tau}}\delta^{k_1 \leftrightsquigarrow s_x\leftrightsquigarrow  k_M}_{s_x \leftrightsquigarrow q \leftrightsquigarrow s_M}\right|_{q= k_y}\\
+\end{align}
+ As each term in this sum occurs only once in $(1)$ and  we get 
+\begin{align}
+& \left.\Gamma^{k_y}_{q s_{\tau}}\delta^{k_1 \leftrightsquigarrow q\leftrightsquigarrow  k_M}_{s_1 \leftrightsquigarrow k_y\leftrightsquigarrow s_M}\right|_{q=  s_x}-\left.\Gamma^{q}_{ s_x s_{\tau}}\delta^{k_1 \leftrightsquigarrow s_x\leftrightsquigarrow  k_M}_{s_x \leftrightsquigarrow q \leftrightsquigarrow s_M}\right|_{q= k_y}\\
+&= \delta^{k_1 \dots k_M}_{s_1 \dots s_M}\left(\Gamma^{k_y}_{s_x s_{\tau}}-\Gamma^{k_y}_{ s_x s_{\tau}}\right)\\
+&=0
+\end{align}
+This show that indeed the covariant derivative of the generalize Kronecker delta is zero.
+$$\lozenge$$
+Note: probably this can also be proved by induction, starting with the result in exercise in chapter 2, page $53$ (see part I of this solution manual).
+$$\blacklozenge$$
+\newpage
+
+
+
+\section{p278 - Exercise 3}
 \begin{tcolorbox}
 Show that
 $$\delta_{k_1 \dots k_M}^{s_1 \dots s_M}=\left|\begin{matrix}
@@ -654,7 +688,7 @@ $$\blacklozenge$$
 \newpage
 
 
-\section{p278 - Exercise 3}
+\section{p278 - Exercise 4}
 \begin{tcolorbox}
 If $T_{rs}$ is a symmetric tensor density and $S_{rs}$ a skew-symmetric tensor density, show that
 \begin{align*}
@@ -751,7 +785,7 @@ $$\blacklozenge$$
 \newpage
 
 
-\section{p279 - Exercise 4}
+\section{p279 - Exercise 5}
 \begin{tcolorbox}
 Let $b_{mn}$ an absolute covariant tensor. Show that the cofactors of the elements $b_{mn}$ in the determinant $\left|b_{mn}\right|$ are the components of a relative contravariant tensor of weight $2$.
 \end{tcolorbox}
@@ -790,10 +824,8 @@ proving that our candidate solution is indeed the solution for $(6)$, provided o
 $$\blacklozenge$$
 \newpage
 
-\end{comment}
 
-
-\section{p279 - Exercise 5}
+\section{p279 - Exercise 6}
 \begin{tcolorbox}
 Determine the tensor character of the cofactors in the determinants formed by the components of \\
 (a) a mixed absolute tensor\\
@@ -875,9 +907,76 @@ and conclude that the cofactor is a relative mixed tensor of weight $1$.
 $$\blacklozenge$$
 \newpage
 
-\section{p279 - Exercise 6}
+\section{p279 - Exercise 7}
 \begin{tcolorbox}
+In the space-time of relativity with metric form
+$$\left ( dx^1\right)^2+\left( dx^2\right)^2+\left ( dx^3\right)^2-\left( dx^4\right)^2$$
+the $3-$space with equation 
+$$\left (x^1\right)^2+\left( x^2\right)^2+\left( x^3\right)^2-\left( x^4\right)^2=0$$
+is called a null cone. prove that the $3-$volume of any portion of the null cone is zero.
+\end{tcolorbox}
+We have $\mathbf{7.414}: v_{(3)} = \int_{R_{(3)}} dv_{(3)} $  with $\mathbf{7.410}: dv_{(3)}= \left(\epsilon(b)b\right)^{\half}\epsilon(\tau)\left | d_{(\beta)}y_{\alpha}\right |$ \\
+and $\mathbf{(7.409)}: b_{\alpha \beta }= a_{ks}\frac{\partial x^k}{\partial y_{\alpha}}\frac{\partial x^s}{\partial y_{\beta}}$. Let's compute $b=\left | b_{\alpha \beta }\right|$. We define the intrinsic parameters $\left(x^1, x^2,x^3\right)$ for the $\left( y_{\alpha}\right)$.
+We have 
+\begin{align}
+\left(a_{mn}\right)&=\left |\begin{matrix}
+1&0&0&0\\
+0&1&0&0\\
+0&0&1&0\\
+0&0&0&-1
+\end{matrix}\right |
+\end{align}
+Let's define $R=\sqrt{\left (y^1\right)^2+\left( y^2\right)^2+\left( y^3\right)^2}$ and using the equation of the null cone in the form $$\left(x^4\right)^2 = R^2$$ we get
+\begin{align}
+\left|b_{mn}\right|&=\left |\begin{matrix}
+1-\left(\frac{x^1}{R}\right)^2&\frac{x^1 x^2}{R^2}&\frac{x^1 x^3}{R^2}\\
+\frac{x^1 x^2}{R^2}&1-\left(\frac{x^2}{R}\right)^2&\frac{x^2 x^3}{R^2}\\
+\frac{x^1 x^3}{R^2}&\frac{x^2 x^3}{R^2}&1-\left(\frac{x^3}{R}\right)^2
+\end{matrix}\right |\\
+&= 1-\left(\frac{x^1}{R}\right)^2-\left(\frac{x^2}{R}\right)^2-\left(\frac{x^2}{R}\right)^2\\
+&= 1 -\frac{R^2}{R^2}\\
+&=0
+\end{align}
+So, $dv_{(3)}=0$ at any point of the null cone giving a zero $3-$volume everywhere on that manifold.
+$$\blacklozenge$$
+\newpage
+%\end{comment}
 
+\section{p279 - Exercise 8$\dagger$}
+\begin{tcolorbox}
+Prove that a polar $N-$space of constant curvature is oriented if $N$ is odd and unoriented if $N$ is even., but that an antipodal $N-$space of constant curvature is always oriented.
+\end{tcolorbox}
+Let's us first sum up some key-definitions which could be usefull for proving the above assumption.\\
+\textbf{a)} Chapter 4 pages 111-116: \textit{In a space with constant positive curvature, two adjacent geodesics issuing from a point $O$ intersect at a point $O^{'}$  at a distance $s=\frac{\pi}{\sqrt{\epsilon K}}$. If we have $O=O^{'}$, than the space is called \textbf{polar} (or elliptic).}\\
+\textbf{b)} The factor $d\tau_{(M)} = \left|d_{(\beta)}y^{\alpha}\right|$ is called the \textbf{\textit{intrinsic extension of the infinitesimal cell in the subspace $V_M$}}. The following relations exist: 
+$$d\tau_{M}^{k_1\dots k_M} = \nu^{k_1\dots k_M}d\tau_{(M)}$$ with $$\nu^{k_1\dots k_M}= \epsilon^{k_1 \dots k_M} \pdv{x^{k_1}\dots  x^{k^M}}{y^{\alpha_1}\dots y^{\alpha_M}}$$
+$\mathbf{\nu^{k_1\dots k_M}}$ is called the \textbf{\textit{$\mathbf{M}-$direction of $V_M$ at a point $P$}}.\\
+If $M=N$ then we see that $\nu^{k_1\dots k_M}=\epsilon^{k_1 \dots k_M} $.\\
+\textbf{c)} page 261: \textit{Comparison of $M-$cells at two different points $A$ and $B$ in a region $R_M$ of the subspace $V_M$ is achieved as follows: The infinitesimal cell at $A$, say, is moved in a continuous manner to $B$ along a path $C$ lying in $R_M$, such that, at each stage of the continuous motion, the intrinsic extension of the cell is non-zero. The orientations of the two cells are then compared at point $B$. }\\
+\textbf{d)} page 261: \textit{There are, however, regions where the orientations of cells at different points cannot be compared because the procedure adapted above is not unique. Such regions are called unoriented or one-sided.}\\
+Before delving in an attempt, some things are not clear for me.
+E.g. in c), how can one be sure that such a path exist zo that the intrinsic extension does not vanish.
+$$\blacklozenge$$
+\newpage
+
+
+\section{p279 - Exercise 9}
+\begin{tcolorbox}
+Show that the total volme of a polar $3-$space of constant curvature $R^{-2}$ is $\pi^2R^3$, and that the volume is $2\pi^2R^3$ if the space is antipodal.
+\end{tcolorbox}
+
+$$\blacklozenge$$
+\newpage
+
+\section{p279 - Exercise 10}
+\begin{tcolorbox}
+If $r_{mn}$ is an absolute tensor in $4-$space, show that $L$ defined by,
+$$L=\left|r_{mn}\right|^{\half}$$
+is an invariant density. Discuss the tensor character of $f^{mn}$ and $g^{mn}$, defined by
+$$f^{mn}=\pdv{L}{r_{mn}}, \quad g^{mn} = f^{mn}\left|f^{ks}\right|^{-\half}$$
+and also of $g_{mn}$, defined by
+$$g_{ms}g^{ns}= \delta_n^n$$
+prove that $\left|g_{mn}\right| = \left|f^{mn}\right|$. (Schrödinger)
 \end{tcolorbox}
 
 $$\blacklozenge$$
